--- a/angular.json
+++ b/angular.json
@@ -3,14 +3,11 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "git-learning": {
+    "ng-test": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
-        },
-        "@schematics/angular:application": {
-          "strict": true
         }
       },
       "root": "",
@@ -20,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/git-learning",
+            "outputPath": "dist/ng-test",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -32,7 +29,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/style/styles.scss"
+              "src/styles/styles.scss"
             ],
             "scripts": []
           },
@@ -54,13 +51,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
               ]
             }
@@ -69,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "git-learning:build"
+            "browserTarget": "ng-test:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "git-learning:build:production"
+              "browserTarget": "ng-test:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "git-learning:build"
+            "browserTarget": "ng-test:build"
           }
         },
         "test": {
@@ -96,7 +93,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/style/styles.scss"
+              "src/styles/styles.scss"
             ],
             "scripts": []
           }
@@ -118,16 +115,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "git-learning:serve"
+            "devServerTarget": "ng-test:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "git-learning:serve:production"
+              "devServerTarget": "ng-test:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "git-learning"
+  "defaultProject": "ng-test"
 }
